--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,11 @@
   text-align: center;
 }
 
+.Title {
+  font-family: cursive;
+  font-weight: bolder;
+}
+
 .DogImage {
   margin-left: auto;
   margin-right: auto;
@@ -20,7 +25,31 @@ table{
   width: 100%
 }
 
+.newDog{
+  border-radius: 15px;
+  padding: 10px;
+  background-color: aqua;
+  font-family: cursive;
+  font-weight: bolder;
+}
+
+.viewList{
+  color: white;
+  background-color: pink;
+  border-radius: 15px;
+  font-family: cursive;
+  font-weight: bolder;
+  padding: 10px;
+}
+
+
 td, th{
-  border: 1px solid #cccccc;
-  padding: 8px;
+  border: 3px solid #cccccc;
+  padding: 4px;
+  border-collapse: collapse;
+}
+
+.Rating{
+  font-family: fantasy;
+  font-weight: bolder;
 }
